# IA901-2026S1

./: README.md
projetos/bus-passenger-count/: .env.example  .gitignore  FINAL_EXPERIMENT_RESULTS.md  README.md  WANDB.md  final_experiment_results.json  pyproject.toml  run_final_experiments.py
projetos/bus-passenger-count/data/: datasheet_crowdhuman.md  datasheet_inside-bus-view.md  datasheet_passenger-deakin.md  datasheet_passenger-detection-on-a-bus.md  readme.md
projetos/bus-passenger-count/data/interim/: readme.md
projetos/bus-passenger-count/data/processed/: readme.md
projetos/bus-passenger-count/data/raw/: readme.md
projetos/bus-passenger-count/experiments/: e0-baseline-large.yaml  e0-baseline-medium.yaml  e0-baseline-nano.yaml  e0-baseline.yaml  e1-dkn.yaml  e1-ibv.yaml  e1-pdb.yaml  e1-public-noaug.yaml  e2-all-aug-bad.yaml  e2-all-aug-bus.yaml  e2-all-aug-off.yaml  e2-all-proc.yaml  e2-all-seed123.yaml  e2-all-seed456.yaml  e2-all.yaml  e2-ibv-dkn.yaml  e2-pdb-dkn.yaml  e2-pdb-ibv.yaml  e2-public-busaug.yaml  e2-public-default.yaml  e3-aug-bus.yaml  e3-crowd-all.yaml  e3-proc.yaml  e3-public-crowd-busaug.yaml  e3-public-crowd-default.yaml  e4-large.yaml  e4-nano.yaml  e4-private-adapt-medium-busaug.yaml  e4-private-adapt-medium.yaml  e5-private-adapt-large-busaug.yaml  e5-private-adapt-large.yaml  e5-private-adapt-nano-busaug.yaml  e5-private-adapt-nano.yaml
projetos/bus-passenger-count/notebooks/: 1_download_datasets.ipynb  2_preprocess_datasets.ipynb  3_train.ipynb  4_evaluate.ipynb  4_validate_test.ipynb  bus-passenger-count.ipynb
projetos/bus-passenger-count/src/: README.md  config.py  data.py  datasets.py  eval.py  experiments.py  preprocess.py  process_utils.py  train.py  wandb_utils.py
(+22 files in other folders)
