[project]
name = "bus-passenger-count"
version = "0.1.0"
description = "Bus passenger counting with computer vision (IA901 2026S1)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ultralytics>=8.3.0",
    "wandb>=0.18.0",
    "nbformat>=5.10.0",
    "python-dotenv>=1.0.1",
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "opencv-python>=4.10.0",
    "albumentations>=2.0.8",
    "matplotlib>=3.9.0",
    "ipykernel>=6.29.0",
    "gdown==5.2.0",
    "huggingface-hub>=0.24.0",
    "pillow>=10.0.0",
    "jupyterlab>=4.5.8",
    "pyyaml>=6.0.3",
    "roboflow>=1.3.10",
    "datasets>=5.0.0",
    "ipywidgets>=8.1.8",
    "dotenv>=0.9.9",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
